--- a/html/introduction-to-html/getting-started/index.html
+++ b/html/introduction-to-html/getting-started/index.html
@@ -8,3 +8,22 @@
     <p>This is my page</p>
   </body>
 </html>
+<html>
+  <head> 
+  <meta charset="utf-8">
+    <title>My test page</title>
+    </head>
+  <body>
+    <p>This is my page</p>
+  </body>
+</html>
+<!DOCTYPE html>
+<html lang="en-US">
+      <head>
+<meta charset="utf-8">
+<title>My test page</title>
+</head>
+<body>
+  <p>This is my page</p>
+  </body>
+</html>
